@@ -6,7 +6,7 @@ c8450849ededa8b7eaf669493c5096823bddbdab assets/ancillary/blockstates/emerald_pi
 df4c8a70106415045bd2e652fc7874750bde8245 assets/ancillary/blockstates/gold_pillar.json
 c55b7039b7e3f484fcf6cf74d634dcf047d576fe assets/ancillary/blockstates/iron_pillar.json
 a95c4ab8756b3acd0f18317b0f54fdf2a1c9def6 assets/ancillary/blockstates/leather_block.json
-21fe380fa939360acee097bb1abf3f94176b1e6b assets/ancillary/blockstates/lush_stone.json
+79947a6305cd7a5b0b142cd6ff74cc86f5588aa3 assets/ancillary/blockstates/lush_stone.json
 b8e39873dff907298d154cc0c396d6088b9b6985 assets/ancillary/blockstates/netherite_pillar.json
 c1391ef452d6084e5cb1878e9f1dfd8426657c3d assets/ancillary/blockstates/pebbles.json
 0b250b97e24442fe47ff4be3337459cd0d944249 assets/ancillary/blockstates/polished_rock_block.json
@@ -67,6 +67,7 @@ e3d5a4705d1cd1d0a518e2f17f7c34818abd6f09 assets/ancillary/models/block/iron_pill
 7094e0e6b40650784ecb829893ae16c3bb79c68e assets/ancillary/models/block/leather_block.json
 5c93e0752cf386738b281f5e5cb67f15c8335f71 assets/ancillary/models/block/leather_block_horizontal.json
 b3905dc42d8bd64822f3a983f75406e0b30c15a4 assets/ancillary/models/block/lush_stone.json
+978e0133ee35ffc2dc17aeee54c3e397c740ed98 assets/ancillary/models/block/lush_stone_snow.json
 df477092dfffca98f97a8eee517f8a1db670f249 assets/ancillary/models/block/netherite_pillar.json
 ae2b1926c5e5ace56ced726d6629c9a97f59e463 assets/ancillary/models/block/netherite_pillar_horizontal.json
 ac277e1eb2f401534e971ca76d39f377d100ca9b assets/ancillary/models/block/pebbles.json
