@@ -1,0 +1,8 @@
+{
+  "parent": "minecraft:block/cube_bottom_top",
+  "textures": {
+    "side": "ancillary:block/lush_stone_side_snow",
+    "bottom": "minecraft:block/stone",
+    "top": "minecraft:block/snow"
+  }
+}
