@@ -1,8 +1,8 @@
 package jurta.ancillary.block;
 
-import net.minecraft.block.Block;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
+import net.minecraft.block.SnowyDirtBlock;
 import net.minecraft.util.Direction;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.IWorldReader;
@@ -11,22 +11,22 @@ import net.minecraft.world.server.ServerWorld;
 
 import java.util.Random;
 
-public class LushStoneBlock extends Block {
+public class LushStoneBlock extends SnowyDirtBlock {
     public LushStoneBlock(Properties properties) {
         super(properties);
     }
 
-    private static boolean canBeLushStone(BlockState state, IWorldReader worldReader, BlockPos pos) {
+    private static boolean canBeLushStone(BlockState state, IWorldReader world, BlockPos pos) {
         BlockPos blockpos = pos.above();
-        BlockState blockstate = worldReader.getBlockState(blockpos);
-        int i = LightEngine.getLightBlockInto(worldReader, state, pos, blockstate, blockpos, Direction.UP, blockstate.getLightBlock(worldReader, blockpos));
-        return i < worldReader.getMaxLightLevel();
+        BlockState blockstate = world.getBlockState(blockpos);
+        int i = LightEngine.getLightBlockInto(world, state, pos, blockstate, blockpos, Direction.UP, blockstate.getLightBlock(world, blockpos));
+        return i < world.getMaxLightLevel();
     }
 
     @Override
-    public void randomTick(BlockState state, ServerWorld serverWorld, BlockPos pos, Random random) {
-        if (!canBeLushStone(state, serverWorld, pos)) {
-            serverWorld.setBlockAndUpdate(pos, Blocks.STONE.defaultBlockState());
+    public void randomTick(BlockState state, ServerWorld world, BlockPos pos, Random random) {
+        if (!canBeLushStone(state, world, pos)) {
+            world.setBlockAndUpdate(pos, Blocks.STONE.defaultBlockState());
         }
     }
 }
