@@ -1,8 +1,12 @@
 * 1.16.5-0.0.10
+Blocks
+- Lush stone now has a 'snowy' property which functions the same as grass blocks.
 Biomes
 - Added sakura valley
 Generation
-- Finally fixed lush stone generation (Now enabled by default)
+- Finally fixed lush stone generation (Now enabled by default.)
+Textures
+- Update sakura leaves texture
 * 1.16.5-0.0.9
 Blocks
 - Leather blocks are now rotatable
